--- a/Authenticator.xcodeproj/xcshareddata/xcschemes/Authenticator.xcscheme
+++ b/Authenticator.xcodeproj/xcshareddata/xcschemes/Authenticator.xcscheme
@@ -73,7 +73,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
