--- a/Authenticator/Info.plist
+++ b/Authenticator/Info.plist
@@ -27,7 +27,7 @@
 	<key>LSSupportsOpeningDocumentsInPlace</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>$(PRODUCT_NAME) SOTP uses your camera to scan bar code</string>
+	<string>$(PRODUCT_NAME) SOTP uses your camera to scan QR-code</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Lato-Light.ttf</string>
