--- a/Authenticator.xcodeproj/xcshareddata/xcschemes/SOTPWatch.xcscheme
+++ b/Authenticator.xcodeproj/xcshareddata/xcschemes/SOTPWatch.xcscheme
@@ -42,6 +42,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "1419CF7826851D5A00B1BD51"
+               BuildableName = "SOTPUITests.xctest"
+               BlueprintName = "SOTPUITests"
+               ReferencedContainer = "container:Authenticator.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
