--- a/Authenticator.xcodeproj/xcshareddata/xcschemes/Authenticator.xcscheme
+++ b/Authenticator.xcodeproj/xcshareddata/xcschemes/Authenticator.xcscheme
@@ -27,7 +27,7 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      language = "ru"
+      language = "en-GB"
       region = "RU">
       <Testables>
          <TestableReference
