--- a/Authenticator.xcodeproj/xcshareddata/xcschemes/SOTPWatch.xcscheme
+++ b/Authenticator.xcodeproj/xcshareddata/xcschemes/SOTPWatch.xcscheme
@@ -64,10 +64,8 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/Authenticator">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "14543D9C24853A03008E7DA8"
@@ -75,7 +73,7 @@
             BlueprintName = "SOTPWatch"
             ReferencedContainer = "container:Authenticator.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -83,10 +81,8 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/Authenticator">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "14543D9C24853A03008E7DA8"
@@ -94,16 +90,7 @@
             BlueprintName = "SOTPWatch"
             ReferencedContainer = "container:Authenticator.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "14543D9C24853A03008E7DA8"
-            BuildableName = "SOTPWatch.app"
-            BlueprintName = "SOTPWatch"
-            ReferencedContainer = "container:Authenticator.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
