--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -7,12 +7,12 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  build-and-test:
     runs-on: macos-latest
 
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
 
-    - name: Build and test
-      run: xcodebuild clean build test -workspace Authenticator/Authenticator.xcodeproj -scheme "Authenticator" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 13" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
+    uses: maierj/fastlane-action@v1.4.0
+      with:
+          lane: run_tests
