--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -16,4 +16,4 @@ jobs:
     - name: Run tests
       uses: maierj/fastlane-action@v2.2.0
       with:
-        lane: 'run_tests'
+        lane: 'tests'
